Controller e service do Colaborador - Modelbuild do treinamento, colaborador e participacao no databaseContext

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Data Source=(DESCRIPTION = (ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle.fiap.com.br)(PORT = 1521)))(CONNECT_DATA = (SID = orcl)));Persist Security Info=True;User ID=rm560488;Password=190105;Pooling=True;Connection Timeout=60;"
+    // --- ATENÇÃO: Verifique se o nome do seu Connection String é "DatabaseConnection" ou "DefaultConnection" ---
+    "DatabaseConnection": "Data Source=(DESCRIPTION = (ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle.fiap.com.br)(PORT = 1521)))(CONNECT_DATA = (SERVICE_NAME = orcl)));Persist Security Info=True;User ID=rm560488;Password=190105;Pooling=True;Connection Timeout=60;"
   },
   "AllowedHosts": "*"
 }
